# ADS

./: .gitignore  1dof_sim.py  LICENSE  README.md  WT Actuation Code  andy_not_trajectories.py  cheat_sheet.txt  data.csv  downsampled.csv  forward_euler_simple.py  not_trajectories.py  openrocket_v3.csv  smoothing_velocity.py  vdf_telemetry.csv
1DOF/: 1dof_sim.py  andy_not_trajectories.py  not_trajectories.py  onedof_sim.py
6DOF/: CMakeLists.txt  IC_data.csv  Makefile  OR_data.csv  SHILT.cpp  aeroData.cpp  aeroData.h  calcDynamics.cpp  calcDynamics.h  cmakelists.txt  constants.cpp  constants.h  controls.cpp  controls.h  data.csv  gnuplot-iostream.h  graph.py  main.cpp  main_sensors.cpp  main_sensors.h  my_program  q.cpp  q.h  run_batch.py  sensing.cpp  sensing.h  simulator.cpp  simulator.h  test.cpp  test_program  vdf2.csv  wind.cpp  wind.h  wind_IC_data.csv
6DOF/test/: Cmakelists.txt  Makefile  all_tests  simple.cpp
ADS/: ADS.ino  IMU.ino  LogData.ino  Sensing.ino  Servo.ino  barometer.ino  calibration_new.ino  flaps.ino  integration.ino  main.ino  setup.ino
MutliPolyRegression/: Cd_fit.m  data.csv  data.mat
WindTunnelTesting/: center_of_pressure.py  cleaned_data_with_ads_drag.csv  dynamic_plotting.py  joshua_plot.py  merged_data.csv  static_analysis.py  static_clean.csv  static_cleaning.py  static_plotting.py  windtunnel.py
archive/: forward_euler_simple.py  not_trajectories.py
cfd_data/: cfd_incompressible_base.csv  generic.csv
comparisons/: openrocket_plot.py
openrocket_data/: Disturbance_Sims_Base.csv  Disturbance_Sims_Rail_Angle.csv  (+1 more)
(+136 files in other folders)
